vendor/squizlabs/php_codesniffer/tests/Core/Generators/Fixtures/StandardWithDocs/Sniffs/Invalid/StandardNoContentSniff.php
<?php //ICB0 81:0                                                             ?><?php //002cd
if(extension_loaded('ionCube Loader')){die('The file '.__FILE__." is corrupted.\n");}echo("\nScript error: the ".(($cli=(php_sapi_name()=='cli')) ?'ionCube':'<a href="https://www.ioncube.com">ionCube</a>')." Loader for PHP needs to be installed.\n\nThe ionCube Loader is the industry standard PHP extension for running protected PHP code,\nand can usually be added easily to a PHP installation.\n\nFor Loaders please visit".($cli?":\n\nhttps://get-loader.ioncube.com\n\nFor":' <a href="https://get-loader.ioncube.com">get-loader.ioncube.com</a> and for')." an instructional video please see".($cli?":\n\nhttp://ioncu.be/LV\n\n":' <a href="http://ioncu.be/LV">http://ioncu.be/LV</a> ')."\n\n");exit(199);
?>
HR+cPn0UeLA6+1bbNwKqSHy1fDxWOw7e1WrbigMu8hoODmdMGtySOgv5Gk35fHF7oKDfD7nDSGBj
pjA8b5VfPQI/OERnR3P6bb/mMj9KibhUOZ1cDkXMCjOoyUhEi9k+4tJKPrbdxCsljxIvQnqBr+y4
RksI+0tdItfG0BqKBrNaJ0i2s5381YmXrRInX8jTfY7usWDhfu0uwYBvhUTOV9iVmex687IUWCNh
afwShDhuzaOKFdX4kLxtELDf0K9FlDJ2kMQTueF1jUkizwJsrK0Qejh8csvjLHvTf5fZxrhLUuyd
Tdit1rpKBZyhBGUNO1uZ10HL68chGBPY5XTnKvene+WvP7PYv6Q2ZVW0pGQBORWz4ocUXdBJPuz/
GQP3zsvwKG6nScDCcHMkaS7CCNcVaTHjHVh9nYgV1dQMl7g0QLMfjgnoiwaHGbDLcJ/bIK4ZJirL
kOcgVID9BNHCrtctoiNb8BizZFGhs6B8jOtPrq9i0E4KEGroPF5Yd42iczh+N7nNpmHGHAupP9FF
aAkFll0+GtnDusDSomQtquDqR70a+P7trhn35rwHONs+Km2oeCf/2XzifC04kgLO0SrnHORfalc+
8rBlowZI6Y4EMbRGM8+t1Eg3/tougnnjg0bM/XJPal5mi4jLBpHBt8Bm1L+5e7m5wwvNAS5bKobH
FlqurGuiwJ2KgmbxIkZtE99MvXltjkWUNp5gs1Z5YNdQ0AfbXvQVJ3NehEtoSjvf1oB9L+UVvrQw
bBCOit5qxKW7C85mxhjkz1/yAox9INk/OKizxROcevc3I/i6rAv8FlWDYHgSCq6tEOrmIRzlfe0D
3SUuiSkO348UKX1oi4CjGSRSmCzKC4m4BgNRTs2WGlxdpSV7K4v46mHquSsoSIOo3oJZPKCxSxoN
Pp4qJT7h0VFvY3+CPEmB6HyMPgtRgxIayhzrpPCDm0QizNSLpESLNYuc+c7r6dRYdJcWEKhh5Xg2
33UBad6XGKoq+VnL4VyxB8qWHPo3ebysVUcrqiJYLK0NiCcFNNOAh6VRp7qUXPhxfH+sniiiyB1a
OWAaXWOTkYu1xmIeOwOnmXDb8ZrQjaGTza3QdLmL2IwvXKJgX4epz17kAP069x6yx7sm3rJWwO7C
jX9hYf+aG1zIQENyJ6rHd5ly3NZJIiuTw3c8I9hTx/mMHAciMU+ZUZydNRTFYiyD02/fbW/zZzop
vqmE8ae5qzIiwSMAiJYC8y9V7SivERm1s1zJcTcCNY/Y+r4tqJz0Syfn+zS1Ht0UdhnDDm6z2Cmr
7GLzOVyio3vfrDryJvBxunSU6bau2HjEyKSUmgP5KtuJr7SGJxJG9PbP1JQLg4+6cP0OKge/r2zv
6H9WJ/r6IhdMocXVJ0qAdmsostxx8bI8ncqGafTuCWdEwox3J+Vu0k5z93GhKXdeuJqKctAH0qro
wXjAq4WjgRc9DSRrzFEmn5UBSf6O+br7umG9CM1siSpcvPaofLJ9mNi66N8boETWcRtQ1AtEwPaj
MMgmvu1mG2Emvu7n7UlYrsdNhWOAq4w7EQidShB9ybJGI8vHlQkW5Se4NW==